--- a/cloudtest/pom.xml
+++ b/cloudtest/pom.xml
@@ -7,15 +7,16 @@
         <groupId>com.shi</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.shi</groupId>
-    <artifactId>system</artifactId>
+    <artifactId>cloudtest</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -26,7 +27,5 @@
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
     </dependencies>
-
-
 
 </project>
