--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,9 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>system</module>
+        <module>cloudtest</module>
+        <module>eureka</module>
+        <module>eurekatwo</module>
     </modules>
     <packaging>pom</packaging>
 
